--- a/.github/workflows/ejercicio2.yml
+++ b/.github/workflows/ejercicio2.yml
@@ -14,6 +14,7 @@ jobs:
 
   test: # El nombre del job 
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Testing
         run: |
@@ -21,6 +22,7 @@ jobs:
           
   push: # El nombre del job 
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Deployment
         run: |
