--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -1,14 +1,14 @@
 # .github/workflows/issue-on-push.yml
-#name: Crear issue al abrir PR
-#on:
-#  pull_request:
-#    branches: 
-#      - '*'
-on: [push]
-name: Create an issue on push
-permissions:
-  contents: read
-  issues: write 
+name: Crear issue al abrir PR
+on:
+  pull_request:
+    branches: 
+      - '*'
+#on: [push]
+#name: Create an issue on push
+#permissions:
+#  contents: read
+#  issues: write 
   
 jobs:
   issue:
