--- a/.github/workflows/ejercicio32.yml
+++ b/.github/workflows/ejercicio32.yml
@@ -2,7 +2,8 @@ name: Issue en Pull Request
 
 on:
   pull_request:
-    types: [opened, closed]
+    branches: 
+      - '*'
 
 jobs:
   generate-issue:
