--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -16,6 +16,6 @@ jobs:
       - run: | 
           pull_request_url="${{ github.event.pull_request.html_url }}"
           issue_body="This issue is related to pull request: [${pull_request_url}](${pull_request_url})"
-          gh issue create --title "I found a bug" --body "${issue_body}" -a "eperez"
+          gh issue create --title "I found a bug" --body "${issue_body}" -a "EperezStemdo"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
