--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -24,16 +24,9 @@ jobs:
         run: |
           pr_number="${{ github.event.pull_request.number }}"
           issue_number=$(echo "${pr_body}" | grep -oE '#[0-9]+' | head -n1)
-          new_pr_body="Closes ${issue_number}\n\n${pr_body}"
+          new_pr_body="Closes #${issue_number}"
           gh pr edit "${pr_number}"  --body "${new_pr_body}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
           
-      - name: Cerrar issue cuando se cierra la pull request
-        if: github.event.pull_request.merged == true || github.event.pull_request.closed_at != null
-        #github.event.pull_request.closed_at != null es una condición que verifica si el campo closed_at en el JSON del evento de la solicitud de extracción tiene un valor diferente de null. Este campo contiene la fecha y hora en que se cerró la solicitud de extracción.
-        run: |
-          issue_number=$(echo '${{ github.event.pull_request.number }}')
-          gh issue close $issue_number
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
