--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -22,7 +22,7 @@ jobs:
           
       - name: Añadir closes a la pr
         run: |
-          gh pr edit ${{ github.event.number }} --body "Close #${{ env.issue_id }}"
+          gh pr edit ${{ github.event.number }} --body "Close #${{ issue_id }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
           
