--- a/.github/workflows/ejercicio4dispatch.yml
+++ b/.github/workflows/ejercicio4dispatch.yml
@@ -1,19 +1,17 @@
 name: Realizar una operación
 
 on:
-  workflow_dispatch:
+  push:
+    branches: 
+      - '*'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
+  call_workflow_calculadora:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-  llamar_calculadora:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+      
       - name: Llamar a la calculadora
         uses: ./.github/workflows/ejercicio4.yml
         with:
