--- a/.github/workflows/ejercicio6.yml
+++ b/.github/workflows/ejercicio6.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/stemdo-labs/ejercicio-github-basicos-EperezStemdo/imageEperez
-          tags: type=sha
+          tags: "0.0.1"
           
       - name: Login to GHCR
         uses: docker/login-action@v3
