--- a/.github/workflows/ejercicio6.yml
+++ b/.github/workflows/ejercicio6.yml
@@ -1,8 +1,11 @@
 name: Publish to Docker
 on:
-  push:
-    branches:
-      - '*'
+  workflow_call:
+    inputs: 
+      tag:
+        required: true
+        type: string
+
 permissions:
   packages: write
   contents: read
@@ -19,7 +22,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/stemdo-labs/ejercicio-github-basicos-EperezStemdo/imageEperez
-          tags: "0.0.1"
+          tags: "$github.event.inputs.operacion" 
           
       - name: Login to GHCR
         uses: docker/login-action@v3
