--- a/.github/workflows/ejercicio6caller.yml
+++ b/.github/workflows/ejercicio6caller.yml
@@ -1,1 +1,17 @@
+name: Crear imagen Docker 
 
+on:
+  push:
+    branches: 
+      - '*'
+
+jobs:
+  call_ejercicio6:
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@v4
+
+      - name: Llamar a la contruccion de la imagen
+        uses: ./.github/workflows/ejercicio6.yml
+        with:
+          tag: "1.0.0" 
