--- a/.github/workflows/ejercicio6.yml
+++ b/.github/workflows/ejercicio6.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/stemdo-labs/ejercicio-github-basicos-EperezStemdo/imageEperez
-          tags: "$github.event.inputs.operacion" 
+          tags: ${{ inputs.tag }} 
           
       - name: Login to GHCR
         uses: docker/login-action@v3
