--- a/.github/workflows/ejercicio6caller.yml
+++ b/.github/workflows/ejercicio6caller.yml
@@ -14,7 +14,7 @@ jobs:
   call-reusable-workflow:
     uses: ./.github/workflows/ejercicio6.yml
     with:
-      tar: "1.0.0" 
+      tag: "1.0.0" 
 
 
 
