--- a/.github/workflows/ejercicio6caller.yml
+++ b/.github/workflows/ejercicio6caller.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: 
       - '*'
+permissions:
+  packages: write
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
