--- a/.github/workflows/ejercicio4caller.yml
+++ b/.github/workflows/ejercicio4caller.yml
@@ -6,14 +6,15 @@ on:
       - '*'
 
 jobs:
-  call_ejercicio4:
-     runs-on: ubuntu-latest
-     steps:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
       - uses: actions/checkout@v4
 
-      - name: Llamar a la calculadora
-        uses: ./.github/workflows/ejercicio4.yml
-        with:
-          valor1: 1
-          valor2: 2
-          operacion: '+'
+  call-reusable-workflow:
+    uses: ./.github/workflows/ejercicio6.yml
+    with:
+      valor1: 1
+      valor2: 2
+      operacion: '+'
