--- a/.github/workflows/ejercicio4.yml
+++ b/.github/workflows/ejercicio4.yml
@@ -21,8 +21,9 @@ jobs:
           resultado=0
           
           if [[ "$inputs.operacion" == '+' ]]; then
+            echo ${{ inputs.valor1 }} 
+            echo ${{ inputs.valor2 }} 
             resultado=$((inputs.valor1 + inputs.valor2))
-            resultado=${{ inputs.valor1 + inputs.valor2 }} 
           fi
           
           if [[ "$inputs.operacion" == "-" ]]; then
