--- a/.github/workflows/ejercicio6caller.yml
+++ b/.github/workflows/ejercicio6caller.yml
@@ -3,7 +3,7 @@ name: Crear imagen Docke
 on:
   push:
     branches: 
-      - '*'
+      - 'dev'
 permissions:
   packages: write
   contents: read
