--- a/.github/workflows/ejercicio5.yml
+++ b/.github/workflows/ejercicio5.yml
@@ -1,22 +1,22 @@
-name: Iniciar Sesión en Azure
-
 on:
   workflow_dispatch:
 
+name: Run Azure Login without subscription
+permissions:
+  id-token: write
+  contents: read
 jobs:
-  login_to_azure:
+
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Azure CLI
-        uses: azure/login@v1 #Acción para autenticarse en Azure
-      
-      - name: Iniciar Sesión en Azure
-        run: az login #incia se sión utilizando los secretos de GitHub
-        env:
-        #configurar secretos en el repositorio en Settings>Secrets
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
-      - name: Verificar Sesión
-        run: az account show #Verificar que la sesión se ha iniciado
+    - name: Iniciar sesión en azure
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        allow-no-subscriptions: true
+        enable-AzPSSession: true
+
+
