--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -1,9 +1,8 @@
 name: Issue al abrir una pull requestw
 on:
-  pull_request:
-    types: 
-      - opened
-      - reopened
+  push:
+    branches: 
+      - '*'
 
 jobs:
   issue:
@@ -25,9 +24,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: añadir close a la pr
+      - name: Añadir Close a la pr
         run: |
-          gh pr edit ${{ github.event.number }} --body "Close #${{ steps.create_issue.outputs.issue_id }}"
+          gh pr edit ${{ github.event.number }} --body "Close #${{ outputs.issue_id }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
