--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -16,6 +16,9 @@ jobs:
       
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: '.'
+      
       - name: Crear issue
         run: |
           pull_request_url="${{ github.event.pull_request.html_url }}"
