--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -27,6 +27,15 @@ jobs:
         id: create_issue
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    
+  cerrarissue:
+      runs-on: ubuntu-latest
+      needs: abririssue
+      steps:
+        - name: Añadir close a la pr
+          run: |
+            gh pr comment ${{ github.event.number }} --body "Close #${{ needs.abririssue.outputs.output1 }}"
+          env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
   
