--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -32,6 +32,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: abririssue
       steps:
+        - uses: actions/checkout@v4
         - name: Añadir close a la pr
           run: |
             gh pr comment ${{ github.event.number }} --body "Close #${{ needs.abririssue.outputs.output1 }}"
