--- a/.github/workflows/ejercicio3.yml
+++ b/.github/workflows/ejercicio3.yml
@@ -29,6 +29,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
   cerrarissue:
+      permissions:
+        issues: write
+        pull-requests: write
       runs-on: ubuntu-latest
       needs: abririssue
       steps:
